--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Jarel Rai LCFC Responsive Website</title>
+    <title>LCFC : About | Store | Gallery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/custom.css" rel="stylesheet">
 
