Updated style of content headings
Changed font size and colour of h1 heading in main content area

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-md-3 col-xs-6">
 
             <p><img src="img/pic1.jpg" class="img-responsive" alt=""></p>
-            <h4>Transfer News</h4>
+            <h4>New Signings</h4>
             <p>Leicester City are considering going to the court of arbitration for sport over the signing of Adrien Silva. The Foxes’ appeal to to secure the registration of Portugal midfielder Silva was rejected by world football’s governing body on Wednesday morning.</p>
             <p><a href="#" class="btn btn-default">Read more >></a></p>
 
