Added fourth tab
Added new players tab menu item and content to about page

--- a/about.html
+++ b/about.html
@@ -99,6 +99,7 @@
             <li><a href="#matchpreviews" data-toggle="tab"><span class="glyphicon glyphicon-play-circle" ></span> Match Previews</a></li>
             <li><a href="#squadbuilder" data-toggle="tab"><span class="glyphicon glyphicon-transfer" ></span> Squad Builder</a></li>
             <li><a href="#managers" data-toggle="tab"><span class="glyphicon glyphicon-credit-card" ></span> Managers</a></li>
+            <li><a href="#newplayers" data-toggle="tab"><span class="glyphicon glyphicon-credit-card" ></span> New Players</a></li>
         </ul>
 
 
@@ -130,6 +131,13 @@
             <div class="tab-pane fade" id="managers">
                 <p>
                     <a href="img/tab-img4_LG.jpg" data-toggle="lightbox" data-title="Managers"><img src="img/tab-img4.jpg" width="15%" class="pull-left"></a>Claude Puel is a French football manager and former player who is currently the manager of Premier League club Leicester City. He spent his entire playing career with AS Monaco, before becoming manager of the club, leading them to the league title in his first full season in charge. He has also managed Lille, Lyon, Nice... </p>
+                <p><a href="#" class="btn btn-default btn-sm">Read more >></a></p>
+            </div>
+            
+             <!-- New Players -->
+            <div class="tab-pane fade" id="newplayers">
+                <p>
+                    <a href="img/tab-img4_LG.jpg" data-toggle="lightbox" data-title="NewPlayers"><img src="img/tab-img4.jpg" width="15%" class="pull-left"></a>Claude Puel is a French football manager and former player who is currently the manager of Premier League club Leicester City. He spent his entire playing career with AS Monaco, before becoming manager of the club, leading them to the league title in his first full season in charge. He has also managed Lille, Lyon, Nice... </p>
                 <p><a href="#" class="btn btn-default btn-sm">Read more >></a></p>
             </div>
 
